--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -381,3 +381,11 @@ a {
     color: inherit;
     text-decoration: inherit;
 }
+
+button {
+    cursor: pointer;
+}
+
+button[disabled] {
+    cursor: not-allowed;
+}
