--- a/src/scss/_reset.scss
+++ b/src/scss/_reset.scss
@@ -8,7 +8,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-html {
+ html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -353,6 +353,11 @@ template {
 /**
    * Reset by BshadeUI
    */
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
         Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
