feat: cursor pointer

--- a/src/scss/_cursors.scss
+++ b/src/scss/_cursors.scss
@@ -6,6 +6,7 @@
 
     $cursor-values: (
         auto,
+        pointer,
         col-resize,
         default,
         grab,
@@ -40,7 +41,6 @@
 // s-resize,
 // se-resize,
 // sw-resize,
-// pointer,
 // progress,
 // n-resize,
 // ne-resize,
